# RobDet3D

./: .gitignore  README.md  TODO.md  requirements.txt  setup.py
configs/3dssd_sasa/: 3dssd_sasa_4x2_20e_nuscenes_mini.py  3dssd_sasa_4x4_80e_kitti_car.py  3dssd_sasa_hvcsx1_4x2_20e_nuscenes_mini.py  3dssd_sasa_hvcsx1_4x4_80e_kitti_car.py
configs/iassd/: iassd_4x2_20e_nuscenes.py  iassd_4x2_20e_nuscenes_mini.py  iassd_4x8_80e_kitti_3cls.py  iassd_4x8_80e_kitti_sparse_3cls.py  iassd_aug_4x8_80e_kitti_3cls.py  iassd_hvcsx1_4x2_20e_nuscenes.py  iassd_hvcsx2_4x2_20e_nuscenes_mini.py  iassd_hvcsx2_4x8_80e_kitti_3cls(export).py  iassd_hvcsx2_gq_4x8_80e_kitti_3cls(export).py  iassd_iou_export_4x8_80e_kitti_3cls.py
configs/voxel_rcnn/: voxel_rcnn_4x2_80e_kitti_car.py  voxel_rcnn_4x2_80e_sparse_kitti_car.py
doc/: SSL.md  SSL_DEVELOP.md  add_image_to_rd3d.md
rd3d/: __init__.py
rd3d/api/: __init__.py  checkpoint.py  config.py  dist.py  log.py  wandb.py
rd3d/datasets/: __init__.py  dataset.py
rd3d/models/: __init__.py
rd3d/ops/havs/src/: CMakeLists.txt  common.h  havs_api.cpp  havs_batch.cu  havs_stack.cu  query_batch.cu
rd3d/runner/: __init__.py  checkpoint_hook.py  eval_hook.py  processbar_hook.py  runner.py  tracker_hook.py  train_hook.py
rd3d/utils/: box_coder_utils.py  box_utils.py  common_utils.py  loss_utils.py  (+2 more)
test/: augmentor.py  augmentor_numpy.py  augmentor_numpy_torch.py  augmentor_torch.py  instance_bank.py  log.py  misc.py  querier.py  sampler.py  table.py  visulization.py
tools/: _init_path.py  demo.py  ros_interface.py  test.py  train.py
(+136 files in other folders)
